# VE-Finance-Journal

./: .gitignore  CLAUDE.md  README.md  build-frontend.js  index.html  package-lock.json  package.json  siply_products_import.csv  start-ve-dashboard.bat
.claude/: settings.local.json
.github/workflows/: release.yml
UpdateAccountsFlow/: .gitignore  package-lock.json  package.json  server.js  sync.js
UpdateAccountsFlow/public/: index.html
UpdateAccountsFlow/tools/: auth.js  download.js  export-excel.js  export-html.js  parse-store.js  parse-tradeshow.js  report.js  scrape-items.js
css/: styles.css
docs/superpowers/plans/: 2026-04-17-share-report-month.md
docs/superpowers/specs/: 2026-03-13-ux-improvements-design.md  2026-03-14-design-polish-design.md  2026-04-16-share-report-month-design.md
example_data/: Siply_Accounting_Journal_Example.db
js/: app.js  companies.js  database.js  supabase-adapter.js  sync.js  tutorial.js  ui.js  utils.js
mockups/: final-hybrid.html  option1-xero-modern.html  option2-quickbooks-professional.html  option3-freshbooks-minimal.html  option4-zoho-enterprise.html  option5-wave-friendly.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: ve-sales.test.html
