[package]
name = "accounting-journal"
version = "1.0.0"
description = "Accounting Journal Calculator"
authors = ["you"]
license = ""
repository = ""
default-run = "accounting-journal"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
